Fixed bugs in transitive reincarnation of the Clone Layers

BUG:327571

This patch fixes two problems:
1) The Duplicate of a Group Layer will reset links inside internal
   Clone Layers properly.
2) The removal of a group layer will reincarnate all the clone layers
   which were connected to the descendants of that layer.