krita/image/commands/kis_image_command.h
@@ -39,7 +39,7 @@ public:
      * @param name The name that will be shown in the ui
      * @param image The image the command will be working on.
      */
-    KisImageCommand(const QString& name, KisImageWSP image);
+    KisImageCommand(const QString& name, KisImageWSP image, KUndo2Command *parent = 0);
     virtual ~KisImageCommand();
 
 protected:
